# PathoROB

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/metadata/: camelyon.csv  camelyon_reduced.csv  tcga_4x4.csv  tolkach_esca.csv  tolkach_esca_reduced.csv
pathorob/apd/: apd.py  apd_all_datasets.py  apd_per_dataset.py  plot-performance-drops.ipynb  train_model.py  utils.py
pathorob/apd/utils/: build_splits.py
pathorob/apd/utils/.ipynb_checkpoints/: load_data-checkpoint.py  train_model-checkpoint.py
pathorob/clustering_score/: ANALYSIS_clustering.py  analysis_clustering.py  clustering_score.py  utils.py  utils_clustering.py
pathorob/features/: constants.py  data_manager.py  extract_features.py
pathorob/models/: __init__.py  phikon.py  uni.py  utils.py
pathorob/resources/: tolkach_splits.json
pathorob/robustness_index/: robustness_graphs.py  robustness_index.py  robustness_index_paired.py  robustness_index_utils.py
results/apd/phikonv2_clsmean/: aggregated_summary.json  camelyon_raw.json  camelyon_summary.json  tcga_raw.json  tcga_summary.json  tolkach_esca_raw.json  tolkach_esca_summary.json
results/apd/uni2h_clsmean/: aggregated_summary.json  camelyon_raw.json  camelyon_summary.json  tcga_raw.json  tcga_summary.json  tolkach_esca_raw.json  tolkach_esca_summary.json
results/clustering_score/phikonv2_clsmean/camelyon/: aris.csv  results_summary.json  silhouette_scores.csv
results/clustering_score/phikonv2_clsmean/tcga/: aris.csv  results_summary.json  silhouette_scores.csv
results/clustering_score/phikonv2_clsmean/tolkach_esca/: aris.csv  (+2 more)
(+27 files in other folders)
