[project]
name = "pathorob"
version = "0.1.0"
description = "A benchmark for the robustness of pathology foundation models to non-biological medical center differences"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "BIFOLD Pathomics"}
]
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.2",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "huggingface_hub==0.34.4",
    "datasets==4.0.0",
    "transformers==4.56.1",
    "timm==1.0.19",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.6",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/bifold-pathomics/PathoROB"
Repository = "https://github.com/bifold-pathomics/PathoROB"
"Preprint" = "https://arxiv.org/abs/2507.17845"
"Hugging Face" = "https://huggingface.co/collections/bifold-pathomics/pathorob-6899f50a714f446d0c974f87"

[tool.setuptools.packages.find]
include = ["pathorob*"]
exclude = ["tests*", "docs*"]
